user ve collection da ilişki hatası vardı düzeltildi.